<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".fragments.welcome.SignupFragment">

    <!-- Back Button -->
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button_description"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <!-- Signup Form -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/shape_round_corners_upper"
            android:orientation="vertical"
            android:padding="26dp">

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_and_signup_title"
                android:textColor="@color/dark_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- Subtitle -->
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signup_subtitle"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.17"/>

            <!-- First Name Field -->
            <EditText
                android:id="@+id/first_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/first_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_1"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <!-- Last Name Field -->
            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/last_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_field"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <!-- Phone Number Field -->
            <EditText
                android:id="@+id/phone_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:autofillHints="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_field"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:autofillHints="emailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_field"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <!-- Password field -->
            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:autofillHints="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_field"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_input_field"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:autofillHints="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <!-- Signup Button -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/peach"
                android:letterSpacing="0.02"
                android:text="@string/signup_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_field"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <!-- Login Link -->
            <LinearLayout
                android:id="@+id/login_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginVertical="30dp"
                android:paddingVertical="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_button"
                tools:ignore="VisualLintBounds">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_prompt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_button"
                    android:textColor="@color/peach"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
